--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Aboreto&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-    font-family: 'Inter', sans-serif;
-    background: #0a0a0a;
-    color: #fff;
+  font-family: "Open Sans", sans-serif;
+  background: #101010;
+  color: #fff;
 }
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
-
-
-
